--- a/services.html
+++ b/services.html
@@ -188,7 +188,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">Konservierende Zahnheilkunde
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">Konservierende Zahnheilkunde
                     </a>
                 </h4>
             </div>
@@ -199,16 +199,16 @@
                         <div class="panel-group" id="accordion11">
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion11" href="#collapseOneOne">Füllungen »
+                                <a class="col" data-toggle="collapse" data-parent="#accordion11" href="#collapseOneOne">Füllungen »
                                 </a>
 
                                 <div id="collapseOneOne" class="panel-collapse collapse">
-                                    <div class="panel-body">Wir bieten Ihnen sowohl bewährte Amalgamfüllungen als auch ästhetisch ansprechende, zahnfarbene Kunststofffüllungen an.</div>
+                                    <div class="panel-body col">Wir bieten Ihnen sowohl bewährte Amalgamfüllungen als auch ästhetisch ansprechende, zahnfarbene Kunststofffüllungen an.</div>
                                 </div>
                             </div>
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion11" href="#collapseOneTwo">Wurzelbehandlungen
+                                <a class="col" data-toggle="collapse" data-parent="#accordion11" href="#collapseOneTwo">Wurzelbehandlungen
                                 </a>
 
                                 <div id="collapseOneTwo" class="panel-collapse collapse">
@@ -216,11 +216,11 @@
                             </div>
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion11" href="#collapseOneThree">Fissurenversiegelungen »
+                                <a class="col" data-toggle="collapse" data-parent="#accordion11" href="#collapseOneThree">Fissurenversiegelungen »
                                 </a>
 
                                 <div id="collapseOneThree" class="panel-collapse collapse">
-                                    <div class="panel-body">Unter einer Fissurenversiegelung versteht man das Beschichten der Einkerbungen auf der Kaufläche der Zähne
+                                    <div class="panel-body col">Unter einer Fissurenversiegelung versteht man das Beschichten der Einkerbungen auf der Kaufläche der Zähne
                                         mittels einer dünnen Schicht aus Kunststoff. Als Kariesvorsorge bieten wir Ihnen und Ihren Kindern diese Möglichkeit ab dem 6.Lebensjahr an.</div>
                                 </div>
                             </div>
@@ -234,13 +234,13 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">Parodontologie
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">Parodontologie
                     </a>
                 </h4>
             </div>
 
             <div id="collapseTwo" class="panel-collapse collapse">
-                <div class="panel-body">Der Erhalt Ihrer Zähne ist uns ein großes Anliegen, daher nehmen wir uns gerne allen Problemen rund um Ihren Zahnhalteapparat  an.
+                <div class="panel-body col">Der Erhalt Ihrer Zähne ist uns ein großes Anliegen, daher nehmen wir uns gerne allen Problemen rund um Ihren Zahnhalteapparat  an.
                     Ein besonderes Augenmerk wird dabei auf Zahnfleischprobleme wie Entzündungen, Blutungen und Schmerzen gelegt.</div>
             </div>
         </div>
@@ -248,7 +248,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">Chirurgische Eingriffe
+                    <a class="col" ata-toggle="collapse" data-parent="#accordion1" href="#collapseThree">Chirurgische Eingriffe
                     </a>
                 </h4>
             </div>
@@ -259,7 +259,7 @@
                         <div class="panel-group" id="accordion31">
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion31" href="#collapseThreeOne">Weisheitszahnentfernungen
+                                <a class="col" data-toggle="collapse" data-parent="#accordion31" href="#collapseThreeOne">Weisheitszahnentfernungen
                                 </a>
 
                                 <div id="collapseThreeOne" class="panel-collapse collapse">
@@ -267,11 +267,11 @@
                             </div>
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion31" href="#collapseThreeTwo">Wurzelspitzenresektionen »
+                                <a class="col" data-toggle="collapse" data-parent="#accordion31" href="#collapseThreeTwo">Wurzelspitzenresektionen »
                                 </a>
 
                                 <div id="collapseThreeTwo" class="panel-collapse collapse">
-                                    <div class="panel-body">Um einen bereits wurzelbehandelten Zahn, welcher sich entzündet hat, zu erhalten ist eine Wurzelspitzenresektion
+                                    <div class="panel-body col">Um einen bereits wurzelbehandelten Zahn, welcher sich entzündet hat, zu erhalten ist eine Wurzelspitzenresektion
                                         notwendig. Unter Lokalanästhesie wird das entzündete Gewebe und kleine Teile der Wurzelspitzen entfernt. </div>
                                 </div>
                             </div>
@@ -285,21 +285,21 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseFour">Prothetische Versorgungen
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour">Prothetische Versorgungen
                     </a>
                 </h4>
             </div>
 
 
             <div id="collapseFour" class="panel-collapse collapse">
-                <div class="panel-body">Bei uns werden sowohl Teil- als auch Totalprothesen nach Ihren individuellen Bedürfnissen angefertigt.</div>
+                <div class="panel-body col">Bei uns werden sowohl Teil- als auch Totalprothesen nach Ihren individuellen Bedürfnissen angefertigt.</div>
             </div>
         </div>
 
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseFive">Restaurative Versorgungen
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseFive">Restaurative Versorgungen
                     </a>
                 </h4>
             </div>
@@ -310,39 +310,39 @@
                         <div class="panel-group" id="accordion51">
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveOne">Kronen »
+                                <a class="col" data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveOne">Kronen »
                                 </a>
 
                                 <div id="collapseFiveOne" class="panel-collapse collapse">
-                                    <div class="panel-body">Kronen werden zur Rekonstruktion von einzelnen Zähnen, von uns angefertigt und eingesetzt. </div>
+                                    <div class="panel-body col">Kronen werden zur Rekonstruktion von einzelnen Zähnen, von uns angefertigt und eingesetzt. </div>
                                 </div>
                             </div>
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveTwo">Brücken »
+                                <a class="col" data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveTwo">Brücken »
                                 </a>
 
                                 <div id="collapseFiveTwo" class="panel-collapse collapse">
-                                    <div class="panel-body">Bei Zahnverlust ist ein Schließen der entstandenen Lücke mittels einer Brücke möglich. </div>
+                                    <div class="panel-body col">Bei Zahnverlust ist ein Schließen der entstandenen Lücke mittels einer Brücke möglich. </div>
                                 </div>
                             </div>
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveThree">Veneers »
+                                <a class="col" data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveThree">Veneers »
                                 </a>
 
                                 <div id="collapseFiveThree" class="panel-collapse collapse">
-                                    <div class="panel-body">Veneers sind keramische Verblendschalen zur Korrektur von Abnutzungserscheinungen, Verfärbungen,
+                                    <div class="panel-body col">Veneers sind keramische Verblendschalen zur Korrektur von Abnutzungserscheinungen, Verfärbungen,
                                         Zahnlücken und Fehlstellungen im Frontzahnbereich. </div>
                                 </div>
                             </div>
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveFour">Inlays / Onlays »
+                                <a class="col" data-toggle="collapse" data-parent="#accordion51" href="#collapseFiveFour">Inlays / Onlays »
                                 </a>
 
                                 <div id="collapseFiveFour" class="panel-collapse collapse">
-                                    <div class="panel-body">Hierbei handelt es sich um hochwertige, passgenaue und langlebige Alternativen zu herkömmlichen Füllungen,
+                                    <div class="panel-body col">Hierbei handelt es sich um hochwertige, passgenaue und langlebige Alternativen zu herkömmlichen Füllungen,
                                         welche aus Kunststoff, Keramik oder Gold hergestellt werden. </div>
                                 </div>
                             </div>
@@ -357,14 +357,14 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseSix">Schienentherapie bei Kiefergelenksbeschwerden
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseSix">Schienentherapie bei Kiefergelenksbeschwerden
                     </a>
                 </h4>
             </div>
 
 
             <div id="collapseSix" class="panel-collapse collapse">
-                <div class="panel-body">Bei Kiefergelenksbeschwerden, Schmerzen der Kaumuskulatur oder nächtlichem Zähneknirschen ermöglicht
+                <div class="panel-body col">Bei Kiefergelenksbeschwerden, Schmerzen der Kaumuskulatur oder nächtlichem Zähneknirschen ermöglicht
                     eine Schienentherapie rasche Linderung der Beschwerden.</div>
             </div>
         </div>
@@ -372,14 +372,14 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseSeven">Prophylaxe
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseSeven">Prophylaxe
                     </a>
                 </h4>
             </div>
 
 
             <div id="collapseSeven" class="panel-collapse collapse">
-                <div class="panel-body">Um die eigenen Zähne so lange als möglich gesund zu halten, bieten wir professionelle Zahnreinigung und Mundhygiene an.
+                <div class="panel-body col">Um die eigenen Zähne so lange als möglich gesund zu halten, bieten wir professionelle Zahnreinigung und Mundhygiene an.
                     Diese wird von einer speziell ausgebildeten Assistentin sorgfältig durchgeführt.</div>
             </div>
         </div>
@@ -387,14 +387,14 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapseEight">Bleaching
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseEight">Bleaching
                     </a>
                 </h4>
             </div>
 
 
             <div id="collapseEight" class="panel-collapse collapse">
-                <div class="panel-body">Ihr Lächeln ist uns wichtig. Damit Sie auch außerhalb unserer Ordination strahlen können,
+                <div class="panel-body col">Ihr Lächeln ist uns wichtig. Damit Sie auch außerhalb unserer Ordination strahlen können,
                     helfen wir Ihnen gerne mit einer professionellen Zahnaufhellung.</div>
             </div>
         </div>
