--- a/team.html
+++ b/team.html
@@ -103,7 +103,7 @@
             </div>
             <div class="col-md-3">
                 <img class="img-responsive" src="pictures/assistant.jpeg" alt="">
-                <p>Worker1</p>
+                <p>Cornelia Glanznig</p>
             </div>
 
         </div>
