fixed mobile view

--- a/services.html
+++ b/services.html
@@ -248,7 +248,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" ata-toggle="collapse" data-parent="#accordion1" href="#collapseThree">Chirurgische Eingriffe
+                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">Chirurgische Eingriffe
                     </a>
                 </h4>
             </div>
