fixed index pic size in mobile view

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <!-- Heading Row -->
         <div class="row row-index">
-            <div class="col-md-10">
+            <div class="col-md-10 index-pic">
                 <img class="img-responsive img-rounded img-index" src="pictures/DrPetraDouschan_900x567.png" width="90%" alt="">
             </div>
 
