fixed some bugs

--- a/index.html
+++ b/index.html
@@ -90,18 +90,13 @@
             </div>
 
             <div class="col-md-2">
-                <h2>Behandelnder Arzt</h2>
-                <p>Dr. Petra Douschan <br/>
-                    Zahnarzt/Wahlarzt<br/>
+                <h2>Dr. Petra Douschan</h2>
+                 <p>   Zahnarzt/Wahlarzt<br/>
                     Tel: +43 699 10500590</p>
-                <a class="btn btn-default" href="contact.html">More Info</a>
                 <h2>Termine</h2>
                 Mo + Mi: 14-18<br/>
                 Di + Do: 8-12<br/>
                 Fr: nach Vereinbarung</p>
-<!--                <h2>Notfälle</h2>
-                <p>Unsere Tore sind Ihnen für zahnärztiche Notfälle jederzeit offen. Um telefonische Voranmeldung wird gebeten um zu lange Wartezeiten zu Vermeiden.</p>-->
-
             </div>
 
 </div>
@@ -109,7 +104,7 @@
             <div class="col-md-12">
                 <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan. <br> Lernen Sie uns und unsere Ordination kennen.</h2>
                 <hr>
-                <p class="index-text">In unseren Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis
+                <p class="index-text">In unserer Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis
                     haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,
                     als auch die Räumlichkeiten barrierefrei zu erreichen. Wir bemühen uns um eine rasche Terminvergabe und möglichst geringe Wartezeiten für alle unsere Patienten.
                     </p>
@@ -130,7 +125,6 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
                     <a href="impressum.html">Impressum</a>
                 </div>
             </div>
