--- a/services.html
+++ b/services.html
@@ -272,7 +272,7 @@
 
                                 <div id="collapseThreeTwo" class="panel-collapse collapse">
                                     <div class="panel-body col">Um einen bereits wurzelbehandelten Zahn, welcher sich entzündet hat, zu erhalten ist eine Wurzelspitzenresektion
-                                        notwendig. Unter Lokalanästhesie wird das entzündete Gewebe und kleine Teile der Wurzelspitzen entfernt. </div>
+                                        notwendig. Unter Lokalanästhesie werden das entzündete Gewebe und kleine Teile der Wurzelspitzen entfernt. </div>
                                 </div>
                             </div>
 
@@ -314,7 +314,7 @@
                                 </a>
 
                                 <div id="collapseFiveOne" class="panel-collapse collapse">
-                                    <div class="panel-body col">Kronen werden zur Rekonstruktion von einzelnen Zähnen, von uns angefertigt und eingesetzt. </div>
+                                    <div class="panel-body col">Kronen werden zur Rekonstruktion von einzelnen Zähnen von uns angefertigt und eingesetzt. </div>
                                 </div>
                             </div>
 
@@ -398,24 +398,18 @@
                     helfen wir Ihnen gerne mit einer professionellen Zahnaufhellung.</div>
             </div>
         </div>
-
-
-
-
-
-
-
-
     </div>
 
-
+    <p class="index-text">
+        Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.
+        Gerne übernehmen wir für Sie das Einreichen der Rechnung bei Ihrer Krankenkasse. </p>
 
 
     <!-- Footer -->
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
+                <a href="impressum.html">Impressum</a>
             </div>
         </div>
     </footer>
