--- a/impressum.html
+++ b/impressum.html
@@ -94,26 +94,26 @@
   <!-- Intro Content -->
   <div class="row">
     <div class="col-md-6">
-      <h2>Just a Impressum</h2>
-      <p>Name bzw. Firma des Medieninhabers</p>
-      <p> Unternehmensgegenstand und</p>
-      <p> Wohnort bzw. Sitz (Niederlassung) des Medieninhabers.</p>
+        <h3>Medieninhaber</h3>
+        <p>Dr. Petra Douschan </p>
+        <h3>Unternehmensgegenstand</h3>
+        <p>Zahnarzt/Wahlarzt</p>
+        <h3>Sitz</h3>
+        <p>Schachterlweg 84 <br />
+          9020 Klagenfurt</p>
+        <h3>Kontakt</h3>
+        <p><i class="fa fa-phone"></i>
+            <abbr title="Phone">P</abbr>: (+43) 699-10500590
+        </p>
+        <p><i class="fa fa-envelope-o"></i>
+            <abbr title="Email">E</abbr>: <a href="ordination@douschan.at">ordination@douschan.at</a>
+        </p>
     </div>
   </div>
   <!-- /.row -->
 
 
   <hr>
-
-  <!-- Footer -->
-  <footer>
-    <div class="row">
-      <div class="col-lg-12">
-        <p>Copyright &copy; Your Website 2014</p>
-        <a href="impressum.html">Impressum</a>
-      </div>
-    </div>
-  </footer>
 
 </div>
 <!-- /.container -->
