--- a/ordination.html
+++ b/ordination.html
@@ -162,7 +162,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
+                <a href="impressum.html">Impressum</a>
             </div>
         </div>
     </footer>
