--- a/team.html
+++ b/team.html
@@ -103,7 +103,7 @@
             </div>
             <div class="col-md-3">
                 <img class="img-responsive" src="pictures/assistant.jpeg" alt="">
-                <p>Cornelia Glanznig</p>
+                <p>Cornelia Glanznig (Assistentin)</p>
             </div>
 
         </div>
@@ -113,7 +113,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <a href="impressum.html">Impressum</a>
                 </div>
             </div>
         </footer>
