--- a/contact.html
+++ b/contact.html
@@ -107,26 +107,12 @@
                     Dr. Petra Douschan <br> Schachterlweg 84 <br> 9020 Klagenfurt<br>
                 </p>
                 <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (+43) 699-10500590</p>
+                    <abbr title="Phone">Telefon</abbr>: (+43) 699-10500590</p>
 <!--                <p><i class="fa fa-envelope-o"></i>
                     <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">email? was is das ?</a>
                 </p>-->
                 <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">Ordinatzionszeiten: <br></abbr> Mo + Fr: 14 - 18 Uhr <br> Di + Do: 8 - 12 Uhr <br> Fr: Nach Vereinbarung</p>
-                <ul class="list-unstyled list-inline list-social-icons">
-                    <li>
-                        <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
-                    </li>
-                </ul>
+                    <abbr title="Hours">Ordinationszeiten: <br></abbr> Mo + Fr: 14 - 18 Uhr <br> Di + Do: 8 - 12 Uhr <br> Fr: Nach Vereinbarung</p>
             </div>
         </div>
         <!-- /.row -->
