--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <div class="col-md-2">
                 <h2>Dr. Petra Douschan</h2>
-                 <p>   Zahnarzt/Wahlarzt<br/>
+                 <p>   Wahlzahnarzt<br/>
                     Tel: +43 699 10500590</p>
                 <h2>Termine</h2>
                 Mo + Mi: 14-18<br/>
