--- a/team.html
+++ b/team.html
@@ -99,7 +99,7 @@
             </div>-->
             <div class="col-md-3">
                 <img class="img-responsive" src="pictures/pezi.jpeg" alt="">
-                <p>Dr. Petra Doushan</p>
+                <p>Dr. Petra Douschan</p>
             </div>
             <div class="col-md-3">
                 <img class="img-responsive" src="pictures/assistant.jpeg" alt="">
