--- a/index.html
+++ b/index.html
@@ -104,14 +104,17 @@
             <div class="col-md-12">
                 <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan. <br> Lernen Sie uns und unsere Ordination kennen.</h2>
                 <hr>
-                <p class="index-text">In unserer Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis
-                    haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,
-                    als auch die Räumlichkeiten barrierefrei zu erreichen. Wir bemühen uns um eine rasche Terminvergabe und möglichst geringe Wartezeiten für alle unsere Patienten.
-                    </p>
+                <!--<p class="index-text">In unserer Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis-->
+                    <!--haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,-->
+                    <!--als auch die Räumlichkeiten barrierefrei zu erreichen. Wir bemühen uns um eine rasche Terminvergabe und möglichst geringe Wartezeiten für alle unsere Patienten.-->
+                    <!--</p>-->
+                <p class="index-text">Need new text here?</p>
                 <hr>
-                <p class="index-text">
-                    Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.
-                    Gerne übernehmen wir für Sie das Einreichen der Rechnung bei Ihrer Krankenkasse. </p>
+                <!--<p class="index-text">-->
+                    <!--Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.-->
+                    <!--Gerne übernehmen wir für Sie das Einreichen der Rechnung bei Ihrer Krankenkasse. </p>-->
+
+                <p class="index-text">Need new text here?</p>
                 <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
             </div>
             <!-- /.col-md-4 -->
