added new assist pics

--- a/team.html
+++ b/team.html
@@ -101,10 +101,19 @@
                 <img class="img-responsive" src="pictures/pezi.jpeg" alt="">
                 <p>Dr. Petra Douschan</p>
             </div>
+            <!--<div class="col-md-3">-->
+                <!--<img class="img-responsive" src="pictures/assistant.jpeg" alt="">-->
+                <!--<p>Cornelia Glanznig (Assistentin)</p>-->
+            <!--</div>-->
             <div class="col-md-3">
-                <img class="img-responsive" src="pictures/assistant.jpeg" alt="">
-                <p>Cornelia Glanznig (Assistentin)</p>
+                <img class="img-responsive" src="pictures/chiara_fellner.JPG" alt="">
+                <p>Chiara Fellner (Assistentin)</p>
             </div>
+            <div class="col-md-3">
+                <img class="img-responsive" src="pictures/Tanja_Katharina_Scharf.JPG" alt="">
+                <p>Tanja Katharina Scharf (Assistentin)</p>
+            </div>
+
 
         </div>
         <!-- /.row -->
