--- a/impressum.html
+++ b/impressum.html
@@ -58,18 +58,18 @@
                 <li>
                     <a href="index.html">HOME</a>
                 </li>
-                <li>
-                    <a href="services.html">LEISTUNGEN</a>
-                </li>
-                <li>
-                    <a href="ordination.html">ORDINATION</a>
-                </li>
-                <li>
-                    <a href="team.html">TEAM</a>
-                </li>
-                <li>
-                    <a href="contact.html">KONTAKT</a>
-                </li>
+                <!--<li>-->
+                    <!--<a href="services.html">LEISTUNGEN</a>-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href="ordination.html">ORDINATION</a>-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href="team.html">TEAM</a>-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href="contact.html">KONTAKT</a>-->
+                <!--</li>-->
                 <li>
                     <a href="impressum.html">IMPRESSUM</a>
                 </li>
@@ -97,13 +97,13 @@
         <h3>Medieninhaber</h3>
         <p>Dr. Petra Douschan </p>
         <h3>Unternehmensgegenstand</h3>
-        <p>Zahnarzt/Wahlarzt</p>
+        <p>Zahnarzt</p>
         <h3>Sitz</h3>
-        <p>Schachterlweg 84 <br />
-          9020 Klagenfurt</p>
+        <p>St. Gertraud 84<br />
+          9413 Frantschach-St.Gertraud</p>
         <h3>Kontakt</h3>
         <p><i class="fa fa-phone"></i>
-            <abbr title="Phone">P</abbr>: (+43) 699-10500590
+            <abbr title="Phone">P</abbr>: (+43) 4352-49005
         </p>
         <p><i class="fa fa-envelope-o"></i>
             <abbr title="Email">E</abbr>: <a href="ordination@douschan.at">ordination@douschan.at</a>
