--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
                     <li>
                         <a href="index.html">HOME</a>
                     </li>
-                    <li>
-                        <a href="services.html">LEISTUNGEN</a>
-                    </li>
-                    <li>
-                        <a href="ordination.html">ORDINATION</a>
-                    </li>
-                    <li>
-                        <a href="team.html">TEAM</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">KONTAKT</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a href="services.html">LEISTUNGEN</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="ordination.html">ORDINATION</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="team.html">TEAM</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="contact.html">KONTAKT</a>-->
+                    <!--</li>-->
                     <li>
                         <a href="impressum.html">IMPRESSUM</a>
                     </li>
@@ -91,30 +91,34 @@
 
             <div class="col-md-2">
                 <h2>Dr. Petra Douschan</h2>
-                 <p>   Wahlzahnarzt<br/>
-                    Tel: +43 699 10500590</p>
-                <h2>Termine</h2>
-                Mo + Mi: 14-18<br/>
-                Di + Do: 8-12<br/>
-                Fr: nach Vereinbarung</p>
+                 <p>   Zahnarzt<br/>
+                    Tel: +43 4352 49005</p>
+                <!--<h2>Termine</h2>-->
+                <!--Mo + Mi: 14-18<br/>-->
+                <!--Di + Do: 8-12<br/>-->
+                <!--Fr: nach Vereinbarung</p>-->
+                <h2>Adresse</h2>
+                St. Gertraud 84<br/>
+                9413 Frantschach-St.Gertraud<br/>
             </div>
 
 </div>
         <div class="row row-index">
             <div class="col-md-12">
-                <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan. <br> Lernen Sie uns und unsere Ordination kennen.</h2>
+                <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan.</h2>
+                <!--<h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan. <br> Lernen Sie uns und unsere Ordination kennen.</h2>-->
                 <hr>
                 <!--<p class="index-text">In unserer Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis-->
                     <!--haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,-->
                     <!--als auch die Räumlichkeiten barrierefrei zu erreichen. Wir bemühen uns um eine rasche Terminvergabe und möglichst geringe Wartezeiten für alle unsere Patienten.-->
                     <!--</p>-->
-                <p class="index-text">Need new text here?</p>
+                <p class="index-text">Diese Seite befindet sich gerade im Umbau!</p>
                 <hr>
                 <!--<p class="index-text">-->
                     <!--Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.-->
                     <!--Gerne übernehmen wir für Sie das Einreichen der Rechnung bei Ihrer Krankenkasse. </p>-->
 
-                <p class="index-text">Need new text here?</p>
+                <!--<p class="index-text">Need new text here?</p>-->
                 <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
             </div>
             <!-- /.col-md-4 -->
